
WWW::Mechanize and Test::WWW::Mechanize do not use rt.cpan.org for
bug tracking.  They are now being tracked via Google Code at
http://code.google.com/p/www-mechanize/issues/list

NEXT
------------------------------------
[FIXED]
Tests would fail because we weren't unsetting http_proxy.

Fixed many failed tests.  Overhauled the test server setup.


[ENHANCEMENTS]
Added $mech->click_ok().

The user agent is now "Test-WWW-Mechanize/version" by default.


1.22    Thu Nov 20 00:33:36 CST 2008
------------------------------------
[ENHANCEMENTS]
Added $mech->head_ok() and $mech->put_ok() methods.  Thanks to
Jaldhar Vyas.


1.20    Wed Mar 12 23:56:11 CDT 2008
------------------------------------
[FIXES]
stuff_inputs() used to do nothing.  Now it works.
http://code.google.com/p/www-mechanize/issues/detail?id=9

Fixed punctuation in some error messages.

Fixed compatibility with WWW::Mechanize 1.36.


1.18    Thu Dec  6 10:12:14 CST 2007
------------------------------------
[ENHANCEMENTS]
Added default descriptions for most test assertions.

[FIXES]
HTML::Lint is now properly optional.

Added delays in all the tests that use HTTP::Server::Simple to give
it time to correctly fire up.


1.16    Mon Oct 29 15:34:21 CDT 2007
------------------------------------
[ENHANCEMENTS]
Added $mech->post_ok().  Thanks, Greg Sheard.

Added $mech->submit_form_ok().  Thanks, Mark Stosberg.

Added $mech->html_lint_ok()

[FIXES]
Fixed some bugs that were causing test failures.


1.14    Fri May 11 16:22:02 CDT 2007
------------------------------------
[FIXES]
Fixes test failures.  Thanks to Mark Blackman for RT #26602:

The module tests currently spawn a server (based on
HTTP::Server::Simple::CGI) which is killed when a __DIE__
signal is received, normally only when the invoking
perl dies. However, as perlvar makes clear, the __DIE__
signal is received when eval blocks die as well. The
new version (1.22) of WWW::Mechanize now calles
HTTP::Message::decoded_content which calls Encode.pm